Add anonymous dispatcher telemetry
